# chai-easy

./: .gitignore  CMakeLists.txt  create_wallet.chai  easy-chain-test.cpp  main.cpp  multi-chai-leveldb-test.cpp  multi-chain-test.cpp  threads-utils.h
resource/chai-code/: create_wallet.chai  create_wallet2.chai
